[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Templatelevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Flashlight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Musuh/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Items/Loot/Briefcase.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/UI Element/crossair_blueOutline.png" type="Texture" id=6]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=7]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=8]
[ext_resource path="res://Levels/TutorMessage.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/MoveMessage.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Tutorial" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="TutorMessage" parent="." index="0" instance=ExtResource( 9 )]

[node name="TileMap" parent="Navigation2D" index="0"]
tile_data = PoolIntArray( -655349, 0, 0, -655348, 0, 2, -655347, 0, 2, -655346, 0, 2, -655345, 0, 3, -655344, 0, 2, -655343, 0, 2, -655342, 0, 2, -655341, 0, 2, -655340, 0, 2, -655339, 0, 3, -655338, 0, 2, -655337, 0, 2, -655336, 0, 2, -655335, 0, 2, -655334, 0, 3, -655333, 0, 2, -655332, 0, 2, -655331, 0, 2, -655330, 0, 2, -655329, 0, 2, -655328, 0, 2, -655327, 0, 2, -655326, 0, 2, -655325, 0, 2, -655324, 0, 2, -655323, 0, 2, -655322, 0, 2, -655321, 0, 2, -655320, 0, 1, -589813, 0, 65538, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 0, 65538, -589808, 1, 0, -589807, 1, 0, -589806, 1, 0, -589805, 1, 0, -589804, 1, 0, -589803, 0, 65538, -589802, 1, 0, -589801, 1, 0, -589800, 1, 0, -589799, 1, 0, -589798, 0, 65538, -589797, 1, 0, -589796, 1, 0, -589795, 1, 0, -589794, 1, 0, -589793, 1, 0, -589792, 1, 0, -589791, 1, 0, -589790, 1, 0, -589789, 1, 0, -589788, 1, 0, -589787, 1, 0, -589786, 1, 0, -589785, 1, 0, -589784, 0, 65538, -524277, 0, 65538, -524276, 1, 0, -524275, 1, 4, -524274, 1, 0, -524273, 0, 65538, -524272, 1, 0, -524271, 1, 2, -524270, 1, 2, -524269, 1, 2, -524268, 1, 0, -524267, 0, 6, -524266, 1, 0, -524265, 1, 2, -524264, 1, 4, -524263, 1, 0, -524262, 0, 65538, -524261, 1, 0, -524260, 1, 0, -524259, 1, 4, -524258, 1, 0, -524257, 1, 0, -524256, 1, 2, -524255, 1, 0, -524254, 1, 0, -524253, 1, 0, -524252, 1, 4, -524251, 1, 0, -524250, 1, 4, -524249, 1, 0, -524248, 0, 65538, -458741, 0, 65538, -458740, 1, 0, -458739, 1, 2, -458738, 1, 0, -458737, 0, 65538, -458736, 1, 0, -458735, 1, 0, -458734, 1, 2, -458733, 1, 4, -458732, 1, 0, -458731, 1, 0, -458730, 1, 0, -458729, 1, 4, -458728, 1, 0, -458727, 1, 0, -458726, 0, 65538, -458725, 1, 0, -458724, 1, 4, -458723, 1, 2, -458722, 1, 2, -458721, 1, 0, -458720, 1, 2, -458719, 1, 0, -458718, 1, 4, -458717, 1, 4, -458716, 1, 0, -458715, 1, 0, -458714, 1, 0, -458713, 1, 0, -458712, 0, 65538, -327687, 0, 7, -327686, 0, 262149, -327685, 0, 2, -327684, 0, 2, -327683, 0, 2, -327682, 0, 2, -327681, 0, 2, -393216, 0, 2, -393215, 0, 2, -393214, 0, 2, -393213, 0, 2, -393212, 0, 2, -393211, 0, 2, -393210, 0, 2, -393209, 0, 262148, -393208, 0, 196612, -393207, 0, 196612, -393206, 0, 196612, -393205, 0, 262147, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 0, 65536, -393200, 0, 5, -393199, 1, 0, -393198, 1, 0, -393197, 1, 0, -393196, 1, 0, -393195, 1, 0, -393194, 1, 0, -393193, 1, 4, -393192, 1, 0, -393191, 1, 0, -393190, 0, 65538, -393189, 1, 0, -393188, 1, 0, -393187, 1, 4, -393186, 1, 0, -393185, 1, 4, -393184, 1, 0, -393183, 1, 2, -393182, 1, 0, -393181, 1, 4, -393180, 1, 2, -393179, 1, 4, -393178, 1, 0, -393177, 1, 0, -393176, 0, 65538, -262151, 0, 327682, -262150, 0, 65544, -262149, 1, 0, -262148, 1, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 1, 0, -327678, 1, 0, -327677, 1, 0, -327676, 1, 0, -327675, 1, 0, -327674, 1, 0, -327673, 0, 65543, -327672, 0, 131073, -327671, 0, 131078, -327670, 0, 131078, -327669, 0, 131077, -327668, 1, 0, -327667, 0, 65541, -327666, 1, 0, -327665, 1, 0, -327664, 1, 0, -327663, 1, 0, -327662, 1, 2, -327661, 1, 0, -327660, 0, 65542, -327659, 0, 1, -327658, 1, 0, -327657, 1, 0, -327656, 1, 0, -327655, 0, 65542, -327654, 0, 65537, -327653, 1, 0, -327652, 1, 0, -327651, 1, 4, -327650, 1, 4, -327649, 1, 0, -327648, 1, 2, -327647, 1, 0, -327646, 1, 0, -327645, 1, 4, -327644, 1, 4, -327643, 1, 0, -327642, 1, 4, -327641, 1, 0, -327640, 0, 65538, -196615, 0, 65538, -196614, 1, 0, -196613, 1, 0, -196612, 1, 2, -196611, 1, 2, -196610, 1, 0, -196609, 1, 2, -262144, 1, 4, -262143, 1, 2, -262142, 1, 2, -262141, 1, 4, -262140, 1, 0, -262139, 1, 0, -262138, 1, 0, -262137, 1, 0, -262136, 0, 131076, -262135, 0, 131078, -262134, 0, 131078, -262133, 0, 131077, -262132, 1, 0, -262131, 0, 65538, -262130, 1, 0, -262129, 1, 2, -262128, 1, 0, -262127, 1, 0, -262126, 1, 2, -262125, 1, 0, -262124, 1, 0, -262123, 0, 65538, -262122, 1, 0, -262121, 1, 2, -262120, 1, 0, -262119, 1, 0, -262118, 1, 0, -262117, 1, 0, -262116, 1, 4, -262115, 1, 2, -262114, 1, 2, -262113, 1, 4, -262112, 1, 4, -262111, 1, 0, -262110, 1, 4, -262109, 1, 0, -262108, 1, 4, -262107, 1, 2, -262106, 1, 4, -262105, 1, 0, -262104, 0, 65538, -131079, 0, 65538, -131078, 1, 0, -131077, 1, 2, -131076, 1, 2, -131075, 1, 2, -131074, 1, 2, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 2, -196605, 1, 4, -196604, 1, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 0, 131076, -196599, 0, 131078, -196598, 0, 131078, -196597, 0, 131077, -196596, 1, 0, -196595, 0, 65538, -196594, 1, 0, -196593, 1, 0, -196592, 1, 0, -196591, 1, 0, -196590, 1, 0, -196589, 1, 0, -196588, 1, 0, -196587, 0, 65538, -196586, 1, 0, -196585, 1, 0, -196584, 1, 0, -196583, 1, 0, -196582, 1, 0, -196581, 1, 0, -196580, 1, 0, -196579, 1, 0, -196578, 1, 0, -196577, 1, 0, -196576, 1, 0, -196575, 1, 0, -196574, 1, 0, -196573, 1, 0, -196572, 1, 0, -196571, 1, 0, -196570, 1, 0, -196569, 1, 0, -196568, 0, 65538, -65543, 0, 65538, -65542, 1, 0, -65541, 1, 4, -65540, 1, 0, -65539, 1, 2, -65538, 1, 2, -65537, 1, 2, -131072, 1, 0, -131071, 1, 4, -131070, 1, 2, -131069, 1, 4, -131068, 1, 0, -131067, 1, 4, -131066, 1, 0, -131065, 1, 0, -131064, 0, 65543, -131063, 0, 196613, -131062, 0, 196613, -131061, 0, 65544, -131060, 1, 0, -131059, 0, 65536, -131058, 0, 3, -131057, 0, 2, -131056, 0, 2, -131055, 0, 2, -131054, 0, 2, -131053, 0, 2, -131052, 0, 2, -131051, 0, 4, -131050, 0, 2, -131049, 0, 2, -131048, 0, 2, -131047, 0, 2, -131046, 0, 2, -131045, 0, 2, -131044, 0, 2, -131043, 0, 2, -131042, 0, 2, -131041, 0, 2, -131040, 0, 2, -131039, 0, 2, -131038, 0, 2, -131037, 0, 2, -131036, 0, 5, -131035, 1, 0, -131034, 1, 0, -131033, 0, 7, -131032, 0, 262147, -7, 0, 65538, -6, 1, 0, -5, 1, 4, -4, 1, 2, -3, 1, 0, -2, 1, 0, -1, 1, 2, -65536, 1, 0, -65535, 1, 0, -65534, 1, 2, -65533, 1, 4, -65532, 1, 0, -65531, 1, 4, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 0, 65538, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, -65510, 1, 0, -65509, 1, 0, -65508, 1, 0, -65507, 1, 0, -65506, 1, 0, -65505, 1, 0, -65504, 1, 0, -65503, 1, 0, -65502, 1, 0, -65501, 1, 0, -65500, 1, 0, -65499, 1, 0, -65498, 1, 0, -65497, 0, 131076, -65496, 0, 131077, 65529, 0, 65538, 65530, 1, 0, 65531, 1, 4, 65532, 1, 2, 65533, 1, 4, 65534, 1, 2, 65535, 1, 0, 0, 1, 2, 1, 1, 4, 2, 1, 4, 3, 1, 2, 4, 1, 2, 5, 1, 2, 6, 1, 4, 7, 1, 0, 8, 0, 7, 9, 0, 196612, 10, 0, 196612, 11, 0, 196612, 12, 0, 196612, 13, 0, 196612, 14, 0, 262147, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 4, 20, 1, 0, 21, 1, 4, 22, 1, 0, 23, 1, 2, 24, 1, 2, 25, 1, 0, 26, 1, 2, 27, 1, 4, 28, 1, 2, 29, 1, 2, 30, 1, 2, 31, 1, 2, 32, 1, 0, 33, 1, 4, 34, 1, 2, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 0, 131076, 40, 0, 131077, 131065, 0, 65538, 131066, 1, 0, 131067, 1, 0, 131068, 1, 4, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 2, 65537, 1, 2, 65538, 1, 2, 65539, 1, 2, 65540, 1, 0, 65541, 1, 0, 65542, 1, 2, 65543, 1, 0, 65544, 0, 131076, 65545, 0, 131078, 65546, 0, 131078, 65547, 0, 131078, 65548, 0, 131078, 65549, 0, 131078, 65550, 0, 131077, 65551, 1, 0, 65552, 1, 2, 65553, 1, 2, 65554, 1, 0, 65555, 1, 0, 65556, 1, 2, 65557, 1, 2, 65558, 1, 4, 65559, 1, 2, 65560, 1, 0, 65561, 1, 2, 65562, 1, 0, 65563, 1, 4, 65564, 1, 4, 65565, 1, 4, 65566, 1, 0, 65567, 1, 4, 65568, 1, 4, 65569, 1, 4, 65570, 1, 4, 65571, 1, 0, 65572, 0, 0, 65573, 0, 2, 65574, 0, 2, 65575, 0, 327684, 65576, 0, 65544, 196601, 0, 65538, 196602, 1, 0, 196603, 1, 0, 196604, 1, 4, 196605, 1, 0, 196606, 1, 4, 196607, 1, 2, 131072, 1, 2, 131073, 1, 0, 131074, 1, 0, 131075, 1, 2, 131076, 1, 4, 131077, 1, 4, 131078, 1, 4, 131079, 1, 0, 131080, 0, 131076, 131081, 0, 131078, 131082, 0, 131078, 131083, 0, 131078, 131084, 0, 131078, 131085, 0, 131078, 131086, 0, 131077, 131087, 1, 0, 131088, 1, 0, 131089, 1, 4, 131090, 1, 4, 131091, 1, 4, 131092, 1, 2, 131093, 1, 2, 131094, 1, 2, 131095, 1, 0, 131096, 1, 4, 131097, 1, 2, 131098, 1, 0, 131099, 1, 4, 131100, 1, 4, 131101, 1, 0, 131102, 1, 0, 131103, 1, 4, 131104, 1, 4, 131105, 1, 0, 131106, 1, 0, 131107, 1, 0, 131108, 0, 65538, 262137, 0, 65538, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 4, 262142, 1, 0, 262143, 1, 0, 196608, 1, 4, 196609, 1, 2, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 2, 196614, 1, 0, 196615, 1, 0, 196616, 0, 131076, 196617, 0, 131078, 196618, 0, 131078, 196619, 0, 131078, 196620, 0, 131078, 196621, 0, 131078, 196622, 0, 131077, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 4, 196631, 1, 2, 196632, 1, 2, 196633, 1, 0, 196634, 1, 2, 196635, 1, 4, 196636, 1, 4, 196637, 1, 0, 196638, 1, 4, 196639, 1, 0, 196640, 1, 4, 196641, 1, 0, 196642, 1, 4, 196643, 1, 0, 196644, 0, 65538, 327673, 0, 262146, 327674, 0, 8, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 0, 7, 262152, 0, 196609, 262153, 0, 131078, 262154, 0, 131078, 262155, 0, 131078, 262156, 0, 131078, 262157, 0, 131078, 262158, 0, 131077, 262159, 1, 0, 262160, 1, 4, 262161, 1, 4, 262162, 1, 4, 262163, 1, 4, 262164, 1, 0, 262165, 1, 2, 262166, 1, 4, 262167, 1, 0, 262168, 1, 2, 262169, 1, 2, 262170, 1, 0, 262171, 1, 2, 262172, 1, 0, 262173, 1, 4, 262174, 1, 0, 262175, 1, 4, 262176, 1, 0, 262177, 1, 0, 262178, 1, 2, 262179, 1, 0, 262180, 0, 65538, 393209, 0, 65543, 393210, 0, 327685, 393211, 0, 2, 393212, 0, 2, 393213, 0, 2, 393214, 0, 2, 393215, 0, 2, 327680, 0, 2, 327681, 0, 2, 327682, 0, 2, 327683, 0, 2, 327684, 0, 2, 327685, 0, 2, 327686, 0, 2, 327687, 0, 327684, 327688, 0, 196613, 327689, 0, 196613, 327690, 0, 196613, 327691, 0, 196613, 327692, 0, 196613, 327693, 0, 196613, 327694, 0, 327683, 327695, 1, 0, 327696, 1, 0, 327697, 1, 4, 327698, 1, 2, 327699, 1, 0, 327700, 1, 4, 327701, 1, 0, 327702, 1, 4, 327703, 1, 4, 327704, 1, 4, 327705, 1, 0, 327706, 1, 2, 327707, 1, 2, 327708, 1, 0, 327709, 1, 4, 327710, 1, 4, 327711, 1, 4, 327712, 1, 4, 327713, 1, 0, 327714, 1, 2, 327715, 1, 0, 327716, 0, 65538, 393230, 0, 65538, 393231, 1, 0, 393232, 1, 2, 393233, 1, 2, 393234, 1, 2, 393235, 1, 4, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 2, 393242, 1, 4, 393243, 1, 0, 393244, 1, 2, 393245, 1, 4, 393246, 1, 0, 393247, 1, 4, 393248, 1, 2, 393249, 1, 2, 393250, 1, 4, 393251, 1, 0, 393252, 0, 65538, 458766, 0, 65538, 458767, 1, 0, 458768, 1, 2, 458769, 1, 4, 458770, 1, 0, 458771, 1, 0, 458772, 1, 2, 458773, 1, 2, 458774, 1, 0, 458775, 1, 2, 458776, 1, 0, 458777, 1, 0, 458778, 1, 2, 458779, 1, 2, 458780, 1, 4, 458781, 1, 2, 458782, 1, 0, 458783, 1, 4, 458784, 1, 4, 458785, 1, 0, 458786, 1, 0, 458787, 1, 0, 458788, 0, 65538, 524302, 0, 65538, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 1, 0, 524320, 1, 0, 524321, 1, 0, 524322, 1, 0, 524323, 1, 0, 524324, 0, 65538, 589838, 0, 65536, 589839, 0, 2, 589840, 0, 2, 589841, 0, 2, 589842, 0, 2, 589843, 0, 2, 589844, 0, 2, 589845, 0, 2, 589846, 0, 2, 589847, 0, 2, 589848, 0, 2, 589849, 0, 2, 589850, 0, 2, 589851, 0, 2, 589852, 0, 2, 589853, 0, 2, 589854, 0, 2, 589855, 0, 2, 589856, 0, 2, 589857, 0, 2, 589858, 0, 2, 589859, 0, 2, 589860, 0, 65537 )

[node name="Position2D" type="Position2D" parent="Navigation2D/Destination" index="0"]
position = Vector2( 2424.92, -504.727 )

[node name="Position2D2" type="Position2D" parent="Navigation2D/Destination" index="1"]
position = Vector2( 2424.92, -235.032 )

[node name="Position2D3" type="Position2D" parent="Navigation2D/Destination" index="2"]
position = Vector2( 1942.47, -235.032 )

[node name="Position2D4" type="Position2D" parent="Navigation2D/Destination" index="3"]
position = Vector2( 1942.47, -498.734 )

[node name="Enemy" parent="Musuh" index="0" instance=ExtResource( 4 )]
position = Vector2( 1943.14, -498.872 )

[node name="Door" parent="Doors" index="0" instance=ExtResource( 3 )]
position = Vector2( 799.458, -181.63 )

[node name="Briefcase" parent="Loot" index="0" instance=ExtResource( 5 )]
position = Vector2( 1212.03, 141.493 )

[node name="Exit" parent="." index="9"]
margin_left = 1995.71
margin_top = 393.095
margin_right = 2195.71
margin_bottom = 493.095

[node name="Flashlight" parent="." index="12" instance=ExtResource( 2 )]
position = Vector2( -369.661, 0 )
energy = 0.5

[node name="Flashlight2" parent="." index="13" instance=ExtResource( 2 )]
position = Vector2( 823.963, -2.01395 )
rotation = -1.79724
energy = 0.5

[node name="Flashlight3" parent="." index="14" instance=ExtResource( 2 )]
position = Vector2( 961.359, 575.558 )
rotation = -1.04292

[node name="Flashlight4" parent="." index="15" instance=ExtResource( 2 )]
position = Vector2( 2031.65, -52.3429 )
rotation = 1.44851

[node name="ObjectiveMarker" type="Node" parent="." index="17"]

[node name="MoveObj" type="Area2D" parent="ObjectiveMarker" index="0"]
position = Vector2( 575.431, -28.9782 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarker/MoveObj" index="0"]
shape = SubResource( 1 )

[node name="DoorObj" type="Area2D" parent="ObjectiveMarker" index="1"]
position = Vector2( 800.628, -264.245 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarker/DoorObj" index="0"]
shape = SubResource( 1 )

[node name="NightvisionObj" type="Area2D" parent="ObjectiveMarker" index="2"]
position = Vector2( 2441.07, -7.27359 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarker/NightvisionObj" index="0"]
shape = SubResource( 1 )

[node name="ShootObj" type="Area2D" parent="ObjectiveMarker" index="3"]
position = Vector2( 1716, -186.904 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarker/ShootObj" index="0"]
shape = SubResource( 1 )

[node name="LootObj" type="Area2D" parent="ObjectiveMarker" index="4"]
position = Vector2( 1210.42, 138.421 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveMarker/LootObj" index="0"]
position = Vector2( 2.1189, 3.70811 )
shape = SubResource( 1 )

[node name="ObjectivePosition" type="Node" parent="." index="18"]

[node name="MovePos" type="Position2D" parent="ObjectivePosition" index="0"]
position = Vector2( 575.349, -29.9183 )

[node name="DoorPos" type="Position2D" parent="ObjectivePosition" index="1"]
position = Vector2( 799.841, -232.854 )

[node name="ShootPos" type="Position2D" parent="ObjectivePosition" index="2"]
position = Vector2( 1715.21, -187.315 )

[node name="NightvisionPos" type="Position2D" parent="ObjectivePosition" index="3"]
position = Vector2( 2389.03, -7.2298 )

[node name="LootPos" type="Position2D" parent="ObjectivePosition" index="4"]
position = Vector2( 1210.71, 141.889 )

[node name="ObjectiveMessage" type="Node" parent="." index="19"]

[node name="MoveMessage" parent="ObjectiveMessage" index="0" instance=ExtResource( 10 )]
tutorMsg = "Selamat datang agent pepega, ini adalah hari pertama kamu latihan sebagai seorang agent. Tekan [W] [A] [S] [D] untuk bergerak"

[node name="DoorMessage" parent="ObjectiveMessage" index="1" instance=ExtResource( 10 )]
tutorMsg = "Nice! klik tombol mouse kanan [RMB]  untuk membuka pintu"

[node name="NightvisionMessage" parent="ObjectiveMessage" index="2" instance=ExtResource( 10 )]
tutorMsg = "Sebagai seorang agent kamu akan sering beraksi di tempat yang gelap dan suram, oleh sebab itu kami menyediakan kamu sebuah nightvision. tekan [SPACE] untuk nightvision"

[node name="ShootMessage" parent="ObjectiveMessage" index="3" instance=ExtResource( 10 )]
tutorMsg = "Sekarang kamu lihat ada musuh yang sedang berpatroli, kami menyediakan pistol untuk melumpuhkannya. Tekan tombol mouse kiri [LMB] untuk menembak"

[node name="KoperMessage" parent="ObjectiveMessage" index="4" instance=ExtResource( 10 )]
tutorMsg = "Sebelum kamu pergi. jangan lupa untuk mengambil koper dari musuh!"

[node name="Pointer" type="Sprite" parent="." index="20"]
position = Vector2( 66.8338, 4.90735 )
z_index = 2
texture = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="Pointer" index="0"]
texture = ExtResource( 6 )

[node name="PointerSound" type="AudioStreamPlayer" parent="." index="21"]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="Tween" type="Tween" parent="." index="22"]
[connection signal="body_entered" from="ObjectiveMarker/MoveObj" to="." method="_on_MoveObj_body_entered"]
[connection signal="body_entered" from="ObjectiveMarker/DoorObj" to="." method="_on_DoorObj_body_entered"]
[connection signal="body_entered" from="ObjectiveMarker/NightvisionObj" to="." method="_on_NightvisionObj_body_entered"]
[connection signal="body_entered" from="ObjectiveMarker/ShootObj" to="." method="_on_ShootObj_body_entered"]
[connection signal="body_entered" from="ObjectiveMarker/LootObj" to="." method="_on_LootObj_body_entered"]
